# agentic-workflow-langgraph

./: .env.example  .gitignore  README.md  body.json  main.py  pyproject.toml
config/: settings.py
deploy/lambda_function/: lambda_handler.py  requirements.txt
src/agents/: fact_check_agent.py  report_generation_agent.py  search_agent.py  stop_workflow_agent.py  summarize_agent.py
src/graph/: __init__.py  research_graph.py
src/models/: schemas.py
src/utils/: chain_builder.py  error_handler.py  prompt_templates.py
tests/: test_lambda_handler.py
