[project]
name = "agentic-workflow-langgraph"
version = "0.1.0"
description = "A multi-agent research system using LangGraph for automated research and report generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.13",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
